# ChangeLog for net-misc/networkmanager-openvpn
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager-openvpn/ChangeLog,v 1.8 2009/12/02 11:46:15 dagger Exp $

*networkmanager-openvpn-0.7.2 (02 Dec 2009)

  02 Dec 2009; Robert Piasek <dagger@gentoo.org>
  +networkmanager-openvpn-0.7.2.ebuild:
  Version bump for NetworkManager openvpn client

*networkmanager-openvpn-0.7.1-r1 (24 Aug 2009)

  24 Aug 2009; Robert Piasek <dagger@gentoo.org>
  -networkmanager-openvpn-0.7.0.ebuild,
  -networkmanager-openvpn-0.7.1.ebuild,
  +networkmanager-openvpn-0.7.1-r1.ebuild,
  +files/networkmanager-openvpn-0.7.1-glibc2.10.fix.patch:
  Fixes bug #282428. Thanks for patrakov@gmail.com for providing link
  to upstream patch

*networkmanager-openvpn-0.7.1 (22 Apr 2009)

  22 Apr 2009; Robert Buchholz <rbu@gentoo.org>
  networkmanager-openvpn-0.3.2_p20070621.ebuild,
  networkmanager-openvpn-0.7.0.ebuild, +networkmanager-openvpn-0.7.1.ebuild:
  Version bump by Robert Piasek (bugs 266184).
  Hard-code NM minor dependency.

  05 Dec 2008; Robert Buchholz <rbu@gentoo.org> metadata.xml:
  Add Robert Piasek to metadata

*networkmanager-openvpn-0.7.0 (04 Dec 2008)

  04 Dec 2008; Tomas Chvatal <scarabeus@gentoo.org>
  +networkmanager-openvpn-0.7.0.ebuild:
  New version. Thanks to robert.piasek@member.fsf.org for ebuild.

  16 Sep 2008; Mart Raudsepp <leio@gentoo.org>
  networkmanager-openvpn-0.3.2_p20070621.ebuild:
  Fix build with newer intltool

  31 Dec 2007; Joseph Jezak <josejx@gentoo.org>
  networkmanager-openvpn-0.3.2_p20070621.ebuild:
  Marked ~ppc for bug #197243.

*networkmanager-openvpn-0.3.2_p20070621 (23 Aug 2007)

  23 Aug 2007; Robert Buchholz <rbu@gentoo.org>
  +files/networkmanager-openvpn-0.3.2_p20070621-service-name.patch,
  +metadata.xml, +networkmanager-openvpn-0.3.2_p20070621.ebuild:
  Initial import to tree. Ebuild base by Stephen Klimaszewski
