@@ -3,10 +3,6 @@
 <pkgmetadata>
 <herd>no-herd</herd>
 <maintainer>
-	<email>rbu@gentoo.org</email>
-	<name>Robert Buchholz</name>
-</maintainer>
-<maintainer>
 	<email>steev@gentoo.org</email>
 	<name>Stephen Klimaszewski</name>
 </maintainer>
