@@ -1,6 +1,12 @@
 # ChangeLog for net-misc/networkmanager-pptp
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager-pptp/ChangeLog,v 1.7 2009/12/02 11:39:42 dagger Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/networkmanager-pptp/ChangeLog,v 1.8 2010/01/18 15:32:56 rbu Exp $
+
+  18 Jan 2010; Robert Buchholz <rbu@gentoo.org>
+  networkmanager-pptp-0.7.1.ebuild, networkmanager-pptp-0.7.2.ebuild,
+  metadata.xml:
+  Reverting previous change due to broken dependencies, bug #294486.
+  Dropping maintenance
 
 *networkmanager-pptp-0.7.2 (02 Dec 2009)
 
